force-app/main/default/objects/Assessment_Wizard_Config__mdt/Assessment_Wizard_Config__mdt.object-meta.xml
<CustomObject>
    <label>Assessment Wizard Config</label>
    <pluralLabel>Assessment Wizard Configs</pluralLabel>
</CustomObject>