force-app/main/default/objects/Assessment_Wizard_Config__mdt/fields/Control_Reference__c.field-meta.xml
<CustomField>
    <fullName>Control_Reference__c</fullName>
    <label>Control Reference</label>
    <description>Reference to the compliance control this step evaluates (e.g., AC-2, 164.312(a)(1))</description>
    <type>Text</type>
    <length>100</length>
</CustomField>