force-app/main/default/objects/Assessment_Wizard_Config__mdt/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <label>Framework</label>
    <description>Compliance framework this wizard step belongs to</description>
    <type>Text</type>
    <length>50</length>
    <required>true</required>
</CustomField>