force-app/main/default/objects/Assessment_Wizard_Config__mdt/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <label>Help Text</label>
    <description>Guidance text shown to the user during this wizard step</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>