force-app/main/default/objects/Assessment_Wizard_Config__mdt/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <label>Is Required</label>
    <description>Whether this step must be completed before the wizard can finish</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>