force-app/main/default/objects/Assessment_Wizard_Config__mdt/fields/Stage_Order__c.field-meta.xml
<CustomField>
    <fullName>Stage_Order__c</fullName>
    <label>Stage Order</label>
    <description>Numeric order of this stage within the wizard (1-based)</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>