force-app/main/default/objects/Assessment_Wizard_Config__mdt/fields/Step_Order__c.field-meta.xml
<CustomField>
    <fullName>Step_Order__c</fullName>
    <label>Step Order</label>
    <description>Numeric order of this step within its stage (1-based)</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>