force-app/main/default/objects/Assessment_Wizard_Config__mdt/fields/Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Step_Type__c</fullName>
    <label>Step Type</label>
    <description>Type of wizard step determining the UI component rendered</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto_Scan</fullName>
                <label>Auto Scan</label>
            </value>
            <value>
                <fullName>Manual_Attestation</fullName>
                <label>Manual Attestation</label>
            </value>
            <value>
                <fullName>Evidence_Upload</fullName>
                <label>Evidence Upload</label>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <required>true</required>
</CustomField>