force-app/main/default/objects/Assessment_Wizard_Config__mdt/fields/Wizard_Name__c.field-meta.xml
<CustomField>
    <fullName>Wizard_Name__c</fullName>
    <label>Wizard Name</label>
    <description>Developer name grouping steps into a wizard (e.g., HIPAA_Assessment)</description>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>